Closed Bug 913329 Opened 12 years ago Closed 12 years ago

Glass is broken under win OMTC basic

Categories

(Core :: Graphics: Layers, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26

People

(Reporter: BenWa, Assigned: BenWa)

References

Details

Attachments

(1 file, 2 obsolete files)

Attached patch Working proof of concept (obsolete) — Splinter Review
OMTC Basic is missing some code from nsWindowGfx. Particularly for Glass clearing the DC is important. http://mxr.mozilla.org/mozilla-central/source/widget/windows/nsWindowGfx.cpp#397 I have a POC patch that fixes the issue but it clears more then we need. I need to find the right times to clear before landing this.
Attached patch Good patch (obsolete) — Splinter Review
Assignee: nobody → bgirard
Attachment #800581 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #800788 - Flags: review?(jmuizelaar)
Comment on attachment 800788 [details] [diff] [review] Good patch Review of attachment 800788 [details] [diff] [review]: ----------------------------------------------------------------- I think matt might be better equipped to answer whether this change is correct.
Attachment #800788 - Flags: review?(jmuizelaar) → review?(matt.woodrow)
Comment on attachment 800788 [details] [diff] [review] Good patch Review of attachment 800788 [details] [diff] [review]: ----------------------------------------------------------------- ::: gfx/layers/basic/BasicCompositor.cpp @@ -483,5 @@ > mDrawTarget->DrawSurface(source, > Rect(0, 0, mWidgetSize.width, mWidgetSize.height), > Rect(0, 0, mWidgetSize.width, mWidgetSize.height), > DrawSurfaceOptions(), > - DrawOptions()); We should just use CopySurface instead.
Attachment #800788 - Flags: review?(matt.woodrow)
Attached patch CopySurfaceSplinter Review
Attachment #800788 - Attachment is obsolete: true
Attachment #801622 - Flags: review?(matt.woodrow)
Attachment #801622 - Flags: review?(matt.woodrow) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: