Bug 913329 - Use CopySurface to draw to the screen using OMTC basic. r=mattwoodrow